# recoprof-back

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
src/: main.py  responseBody.py
src/db/: engine.py  models.py  pipelines.py
src/db/repository/: __init__.py  asignaturas_repository.py  comentarios_repository.py  notas_repository.py  profesor_repository.py
src/dependencies/: auth_dep.py  repository_access.py  services_access.py
src/routers/: __init__.py  admin.py  asignaturas.py  auth.py  comentarios.py  profs.py
src/schemas/: comment_post.py
src/services/: comments_service.py
src/utils/: auth_logic.py  pdfextract.py  pipelines.py
src/validations/: Values.py
tests/: fixtures.py  tests_asignaturas_repo.py  tests_coment_service.py  tests_comentario_repo.py  tests_notas_repo.py  tests_profesor_repo.py
