[project]
name = "recoprof-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "odmantic>=1.0.2",
    "pyjwt>=2.10.1",
    "pypdf2>=3.0.1",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pyrefly>=0.24.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool]
